correction contraste

--- a/style.css
+++ b/style.css
@@ -790,7 +790,7 @@ h4 {
 }
 
 .tc-white {
-    color: #333333 !important;
+    color: white !important;
 }
 p {
     font-size: 22px;
